<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainSinAcceso">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/sinacesso"
            />

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/edittextrounded"
            android:orientation="vertical">

            <TextView
                android:id="@+id/obtnerCorreo"
                android:layout_width="246dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="70dp"
                android:gravity="center"
                android:text="@string/sinacceso"
                android:textColor="#FF7777"
                android:textSize="25sp" />



            <TextView
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/usuario"
                android:textSize="20sp"  />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/obtnombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/vacio"
                    android:textSize="13sp" />
                <TextView
                    android:id="@+id/obtapaterno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/vacio"
                    android:textSize="13sp" />
                <TextView
                    android:id="@+id/obtamaterno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/vacio"
                    android:textSize="13sp" />

            </LinearLayout>

            <TextView
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/correo"
                android:textSize="20sp"  />

            <TextView
                android:id="@+id/obtCorreo2"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/vacio"
                android:textSize="13sp"  />

        </LinearLayout>



            <Button
                android:id="@+id/btnSalir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/button_rounded"
                android:text="@string/volver" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />


        </LinearLayout>



    </ScrollView>


</LinearLayout>