<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/imageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="100dp"
                    android:background="@drawable/usuario"
                    />

                <LinearLayout
                    android:layout_width="270dp"
                    android:layout_height="500dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/edittextrounded"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/obtnerCorreo"
                        android:layout_width="246dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="70dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginRight="70dp"
                        android:gravity="center"
                        android:text="@string/bienvenid"
                        android:textColor="@android:color/black"
                        android:textSize="35sp" />



                    <TextView
                        android:layout_width="177dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/usuario"
                        android:textSize="20sp"  />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/obtnombre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="35dp"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/vacio"
                            android:textSize="14dp" />
                        <TextView
                            android:id="@+id/obtapaterno"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/vacio"
                            android:textSize="14dp" />
                        <TextView
                            android:id="@+id/obtamaterno"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/vacio"
                            android:textSize="14dp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="177dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/correo"
                        android:textSize="20sp"  />

                    <TextView
                        android:id="@+id/obtCorreo2"
                        android:layout_width="177dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/vacio"
                        android:textSize="14dp"  />
                    <TextView
                        android:layout_width="177dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/telefono"
                        android:textSize="20sp"  />
                    <TextView
                        android:id="@+id/obttelefono"
                        android:layout_width="177dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/vacio"
                        android:textSize="14dp"  />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="35dp"
                        android:text="@string/fecha"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/obtfechanac"
                        android:layout_width="177dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/vacio"
                        android:textSize="14dp"  />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="35dp"
                        android:text="@string/estado"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/obtestado"
                        android:layout_width="177dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/vacio"
                        android:textSize="14dp"  />

                </LinearLayout>



                <Button
                    android:id="@+id/btnCerrarSesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="100dp"
                    android:background="@drawable/button_rounded"
                    android:text="@string/salir" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp" />


            </LinearLayout>



        </ScrollView>


    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/botton_navigation"
        app:itemBackground="@color/colorPrimary"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>